fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,10 @@ html {
 }
 
 p {
+    display: inline-block;
     margin-top: 0;
-    padding-left: 3em;
+    padding-left: 2em;
     vertical-align: top;
-    max-width: 30em;
+    max-width: 18em;
     text-align: justify;
 }
